--- a/demo/index.html
+++ b/demo/index.html
@@ -5,15 +5,9 @@
         <title>Angular PDF.js demo</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- pdfjs dependencies -->
-        <link rel="stylesheet" href="bower_components/pdf.js-viewer/viewer.css"/>
-        <script src="bower_components/pdf.js-viewer/pdf.worker.js"></script>
-        <script src="bower_components/pdf.js-viewer/pdf.js"></script>
-
-        <!-- angular dependencies -->
         <script src="bower_components/angular/angular.js"></script>
-        <script src="dist/pdfjs-viewer.js"></script>
-        <script src="demo/app.js"></script>
+        <script src="bower_components/angular-pdfjs/dist/pdfjs-viewer.js"></script>
+        <script src="app.js"></script>
 
         <style>
           html, body {
