Updated pdfjsViewer's template so it includes printContainer, fixes #4

--- a/demo/index.html
+++ b/demo/index.html
@@ -29,8 +29,7 @@
     </head>
     <body>
         <div class='some-pdf-container'>
-            <pdfjs-viewer src="{{ pdf.src }}" download="true" print="false" open="false"
-            cmap-dir="vendor/pdf.js-viewer/cmaps" image-dir="vendor/pdf.js-viewer/images"></pdfjs-viewer>
+            <pdfjs-viewer src="{{ pdf.src }}"></pdfjs-viewer>
         </div>
     </body>
 </html>
