Don't load pdf.worker.js in index.html

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,8 +5,7 @@
         <title>Angular PDF.js demo</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <script src="/vendor/pdf.js-viewer/pdf.worker.js"></script>
-        <script src="/vendor/pdf.js-viewer/pdf.js"></script>
+        <script src="vendor/pdf.js-viewer/pdf.js"></script>
         <link rel="stylesheet" href="vendor/pdf.js-viewer/viewer.css">
 
         <script src="/vendor/angular/angular.js"></script>
