Use bower postinstall after running npm install

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,10 +5,10 @@
         <title>Angular PDF.js demo</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <script src="vendor/pdf.js-viewer/pdf.js"></script>
-        <link rel="stylesheet" href="vendor/pdf.js-viewer/viewer.css">
+        <script src="bower_components/pdf.js-viewer/pdf.js"></script>
+        <link rel="stylesheet" href="bower_components/pdf.js-viewer/viewer.css">
 
-        <script src="/vendor/angular/angular.js"></script>
+        <script src="/bower_components/angular/angular.js"></script>
         <script src="/angular-pdfjs-viewer.js"></script>
         <script src="app.js"></script>
 
